==> INSA-GEI/insa-nxpcup/buggy_kl25z/code/buggy/ImageProcessing/ImageProcessing.cpp <==
#include <ImageProcessing/ImageProcessing.hpp>
#include <servo/driver_servo.h>
#define PI 						3.14159265358979323846	// value of PI
#define CAMERA_1_ADC ADC0

void ImageProcessing::capture(void) {
	/* capture des données provenant d'une caméra en utilisant l'ADC.
	 * Il configure le canal 11 de l'ADC pour la capture des pixels de la caméra,
	 * et stocke les valeurs des pixels dans le tableau ImageData.
	 * 128 valeurs sont stockées correspondant à une ligne de la caméra.
	 */

    // Configuration spécifique pour le canal 11 de l'ADC
    const adc16_channel_config_t adc0_config_ch_11 = {
        .channelNumber = 11,
        .enableInterruptOnConversionCompleted = false,
        .enableDifferentialConversion = false,
    };

    // Sélectionner le côté B du MUX pour le canal 11
    ADC16_SetChannelMuxMode(ADC0, kADC16_ChannelMuxB);

    // Activer la ligne SI (Shift In) de la caméra
    CAM_SI_HIGH;
    CAM_DELAY; // Attente pour le délai CAM

    // Activer l'horloge de la caméra
    CAM_CLK_HIGH;
    CAM_DELAY; // Attente pour le délai CAM

    // Désactiver la ligne SI de la caméra
    CAM_SI_LOW;
    CAM_DELAY; // Attente pour le délai CAM

    // Entrée des données de la caméra pour le premier pixel
    ADC16_SetChannelConfig(ADC0, ADC0_Channel_Group, &adc0_config_ch_11);
    while (0U == (kADC16_ChannelConversionDoneFlag &
                  ADC16_GetChannelStatusFlags(ADC0, ADC0_Channel_Group))) {
        // Attente de la fin de la conversion pour prendre la valeur
    }
    ImageData[0] = ADC16_GetChannelConversionValue(ADC0, ADC0_Channel_Group);
    CAM_CLK_LOW;

    // Boucle pour entrer les données de la caméra (un pixel à la fois)
    for (int i = 1; i < 128; i++) {
        CAM_DELAY; // Attente pour le délai CAM

        CAM_CLK_HIGH; // Activer l'horloge de la caméra

        // Entrée des données de la caméra (un pixel à chaque itération de la boucle)
        ADC16_SetChannelConfig(ADC0, ADC0_Channel_Group, &adc0_config_ch_11);
        while (0U == (kADC16_ChannelConversionDoneFlag &
                      ADC16_GetChannelStatusFlags(ADC0, ADC0_Channel_Group))) {
            // Attente de la fin de la conversion pour prendre la valeur
        }
        ImageData[i] = ADC16_GetChannelConversionValue(ADC0, ADC0_Channel_Group);
        CAM_CLK_LOW; // Désactiver l'horloge de la caméra
    }
}

void ImageProcessing::init(){

	/* Initialisation pour ImageProcessing
	 *  - ADC0 channel 11 en mode single conversion. Entrée de l'ADC sur PORTC 2
	 *  - PORTB 8 en sortie GPIO digitale. Controle le SI( Shift - In) de la caméra.
	 *  - PORTB 9 en sortie GPIO digitale. Controle le clock de la caméra.
	 */

	// ------------------- VARIABLES LOCALES ----------------------------------

	// Configuration pour ADC0
	const adc16_config_t adc0_config =
	{
	    // Utilisation des broches Vref externes (VrefH et VrefL) comme source de tension de référence
	    .referenceVoltageSource = kADC16_ReferenceVoltageSourceVref,

	    // Utilisation de ALT1 clk bus/2 comme source d'horloge d'entrée
	    .clockSource = kADC16_ClockSourceAlt1,

	    // Activation de la sortie d'horloge asynchrone
	    .enableAsynchronousClock = false,

	    // Configuration du diviseur d'horloge à 2, divisant la source d'horloge d'entrée
	    .clockDivider = kADC16_ClockDivider1,

	    // Utilisation du mode de résolution 10 bits en mode simple-ended
	    .resolution = kADC16_ResolutionSE10Bit,

	    // Désactivation du mode d'échantillonnage long
	    .longSampleMode = kADC16_LongSampleDisabled,

		// Désactivation du mode haute vitesse
	    .enableHighSpeed = false,

	    // Désactivation du mode basse puissance
	    .enableLowPower = false,

	    // Désactivation du mode de conversion continue, effectue une seule conversion
	    .enableContinuousConversion = false,
	};

	// Configurations GPIO pour les broches d'entrée et de sortie
	const gpio_pin_config_t gpio_pin_input =
	{
	    // Configuration de la broche en entrée numérique
	    .pinDirection = kGPIO_DigitalInput,
	};

	const gpio_pin_config_t gpio_pin_output =
	{
	    // Configuration de la broche en sortie numérique avec logique à 0
	    .pinDirection = kGPIO_DigitalOutput,
	    .outputLogic = 0,
	};

	// ---------------------------------------------------------------------------

	// Initialisation et Configuration de l'ADC
	ADC16_Init(ADC0, &adc0_config);
	ADC16_SetChannelMuxMode(ADC0, kADC16_ChannelMuxB); // Sélectionne le Mux B bit 5 ADC0_CFG2

	// Configuration de l'horloge et des ports
	CLOCK_EnableClock(kCLOCK_PortC);
	CLOCK_EnableClock(kCLOCK_PortB);

	// Muxage des ports pour les broches ADC et GPIO
	PORT_SetPinMux(PORTC, 2u, kPORT_PinDisabledOrAnalog); // Broche 2 de PORTC comme broche ADC
	PORT_SetPinMux(PORTB, 8u, kPORT_MuxAsGpio);          // Broche 8 de PORTB comme broche GPIO
	PORT_SetPinMux(PORTB, 9u, kPORT_MuxAsGpio);          // Broche 9 de PORTB comme broche GPIO

	// Initialisation GPIO
	GPIO_PinInit(GPIOC, 2u, &gpio_pin_input);
	GPIO_PinInit(GPIOB, 8u, &gpio_pin_output);
	GPIO_PinInit(GPIOB, 9u, &gpio_pin_output);

}
